--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.9"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
